--- a/test/index.tpl.html
+++ b/test/index.tpl.html
@@ -13,14 +13,9 @@
   <script src="../node_modules/underscore/underscore.js"></script>
   <script src="../build/operation.js"></script>
   <script>mocha.setup('bdd')</script>
-  <script src="single.spec.js"></script>
-  <script src="cancellation.spec.js"></script>
-  <script src="dependencies.spec.js"></script>
-  <script src="log.spec.js"></script>
-  <script src="queue.spec.js"></script>
-  <script src="registration.spec.js"></script>
-  <script src="single.spec.js"></script>
-  <script src="subclassing.spec.js"></script>
+  <!-- specs --><% specs.forEach( function ( file ) { %>
+  <script type="text/javascript" src="<%= file %>"></script>
+  <% }); %>
   <script>
     mocha.globals(['jQuery']);
     mocha.run();
